compiler/testData/diagnostics/tests/incompleteCode/variableDeclarationInSelector.kt
// FIR_IDENTICAL
fun foo(s: String) {
    s.<!SYNTAX!><!>
    val b = 42
}
